// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileNav Component Snapshot Tests matches snapshot for authenticated state 1`] = `
<div>
  <div
    data-open="false"
    data-testid="sheet"
  >
    <div
      data-testid="sheet-trigger"
    >
      <button
        aria-label="Open menu"
        class="lg:hidden"
        variant="ghost"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-menu h-6 w-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 5h16"
          />
          <path
            d="M4 12h16"
          />
          <path
            d="M4 19h16"
          />
        </svg>
      </button>
    </div>
    <div
      data-testid="sheet-content"
    >
      <div
        class="flex flex-col h-full p-6"
      >
        <div
          data-testid="sheet-header"
        >
          <div
            data-testid="sheet-title"
          >
            <span
              class="text-2xl font-bold text-primary"
            >
              LinkGuard
            </span>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 mt-6 flex-1"
        >
          <button
            class="
        flex items-center gap-3 w-full px-3 py-3 rounded-sm
        min-h-[44px] text-left transition-all duration-200
        bg-canvas-soft text-primary
        focus:outline-none focus-visible:ring-2 focus-visible:ring-primary
      "
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-house h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
            <span
              class="text-base font-medium"
            >
              Home
            </span>
          </button>
          <button
            class="
        flex items-center gap-3 w-full px-3 py-3 rounded-sm
        min-h-[44px] text-left transition-all duration-200
        text-mute hover:bg-canvas-soft hover:text-ink
        focus:outline-none focus-visible:ring-2 focus-visible:ring-primary
      "
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-search h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 21-4.34-4.34"
              />
              <circle
                cx="11"
                cy="11"
                r="8"
              />
            </svg>
            <span
              class="text-base font-medium"
            >
              Analyze
            </span>
          </button>
          <button
            class="
        flex items-center gap-3 w-full px-3 py-3 rounded-sm
        min-h-[44px] text-left transition-all duration-200
        text-mute hover:bg-canvas-soft hover:text-ink
        focus:outline-none focus-visible:ring-2 focus-visible:ring-primary
      "
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-history h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
              />
              <path
                d="M3 3v5h5"
              />
              <path
                d="M12 7v5l4 2"
              />
            </svg>
            <span
              class="text-base font-medium"
            >
              History
            </span>
          </button>
          <button
            class="
        flex items-center gap-3 w-full px-3 py-3 rounded-sm
        min-h-[44px] text-left transition-all duration-200
        text-mute hover:bg-canvas-soft hover:text-ink
        focus:outline-none focus-visible:ring-2 focus-visible:ring-primary
      "
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-info h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 16v-4"
              />
              <path
                d="M12 8h.01"
              />
            </svg>
            <span
              class="text-base font-medium"
            >
              About
            </span>
          </button>
          <hr
            data-testid="separator"
          />
          <div
            class="flex items-center gap-3 px-3 py-3 bg-canvas-soft border border-hairline rounded-sm"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-user h-5 w-5 text-mute"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="12"
                cy="7"
                r="4"
              />
            </svg>
            <span
              class="text-sm font-medium text-ink"
            >
              John Doe
            </span>
          </div>
          <button
            class="
        flex items-center gap-3 w-full px-3 py-3 rounded-sm
        min-h-[44px] text-left transition-all duration-200
        text-risk-danger hover:bg-risk-danger/10
        focus:outline-none focus-visible:ring-2 focus-visible:ring-primary
      "
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-log-out h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 17 5-5-5-5"
              />
              <path
                d="M21 12H9"
              />
              <path
                d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
              />
            </svg>
            <span
              class="text-base font-medium"
            >
              Logout
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileNav Component Snapshot Tests matches snapshot for unauthenticated state 1`] = `
<div>
  <div
    data-open="false"
    data-testid="sheet"
  >
    <div
      data-testid="sheet-trigger"
    >
      <button
        aria-label="Open menu"
        class="lg:hidden"
        variant="ghost"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-menu h-6 w-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 5h16"
          />
          <path
            d="M4 12h16"
          />
          <path
            d="M4 19h16"
          />
        </svg>
      </button>
    </div>
    <div
      data-testid="sheet-content"
    >
      <div
        class="flex flex-col h-full p-6"
      >
        <div
          data-testid="sheet-header"
        >
          <div
            data-testid="sheet-title"
          >
            <span
              class="text-2xl font-bold text-primary"
            >
              LinkGuard
            </span>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 mt-6 flex-1"
        >
          <button
            class="
        flex items-center gap-3 w-full px-3 py-3 rounded-sm
        min-h-[44px] text-left transition-all duration-200
        bg-canvas-soft text-primary
        focus:outline-none focus-visible:ring-2 focus-visible:ring-primary
      "
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-house h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
            <span
              class="text-base font-medium"
            >
              Home
            </span>
          </button>
          <button
            class="
        flex items-center gap-3 w-full px-3 py-3 rounded-sm
        min-h-[44px] text-left transition-all duration-200
        text-mute hover:bg-canvas-soft hover:text-ink
        focus:outline-none focus-visible:ring-2 focus-visible:ring-primary
      "
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-search h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 21-4.34-4.34"
              />
              <circle
                cx="11"
                cy="11"
                r="8"
              />
            </svg>
            <span
              class="text-base font-medium"
            >
              Analyze
            </span>
          </button>
          <button
            class="
        flex items-center gap-3 w-full px-3 py-3 rounded-sm
        min-h-[44px] text-left transition-all duration-200
        text-mute hover:bg-canvas-soft hover:text-ink
        focus:outline-none focus-visible:ring-2 focus-visible:ring-primary
      "
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-info h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 16v-4"
              />
              <path
                d="M12 8h.01"
              />
            </svg>
            <span
              class="text-base font-medium"
            >
              About
            </span>
          </button>
          <hr
            data-testid="separator"
          />
          <button
            class="
        flex items-center gap-3 w-full px-3 py-3 rounded-sm
        min-h-[44px] text-left transition-all duration-200
        text-mute hover:bg-canvas-soft hover:text-ink
        focus:outline-none focus-visible:ring-2 focus-visible:ring-primary
      "
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-log-in h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m10 17 5-5-5-5"
              />
              <path
                d="M15 12H3"
              />
              <path
                d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
              />
            </svg>
            <span
              class="text-base font-medium"
            >
              Log In
            </span>
          </button>
          <button
            class="
        flex items-center gap-3 w-full px-3 py-3 rounded-sm
        min-h-[44px] text-left transition-all duration-200
        text-mute hover:bg-canvas-soft hover:text-ink
        focus:outline-none focus-visible:ring-2 focus-visible:ring-primary
      "
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-user-plus h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="9"
                cy="7"
                r="4"
              />
              <line
                x1="19"
                x2="19"
                y1="8"
                y2="14"
              />
              <line
                x1="22"
                x2="16"
                y1="11"
                y2="11"
              />
            </svg>
            <span
              class="text-base font-medium"
            >
              Sign Up
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
